--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
-  "name": "opp-js_nutshell",
+  "name": "opp-Project_Template",
   "version": "1.0.0",
   "description": "This is a simple LEMP stack setup to use with docker-compose.",
   "main": "index.js",
   "scripts": {
-    "sass:watch": "sass --watch $(pwd)/www.opportunity-zueri.ch/projects/js_nutshell/scss:$(pwd)/www.opportunity-zueri.ch/projects/js_nutshell/css"
+    "sass:watch": "sass --watch $(pwd)/www.opportunity-zueri.ch/projects/project_name/scss:$(pwd)/www.opportunity-zueri.ch/projects/js_nutshell/css"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/mtaopp/js_nuts"
+    "url": "git+https://github.com/atournikate/Project_Template"
   },
-  "author": "Anita Peyer, changes made by Mirko Tachezy, and tweaks by Kate Ebensteiner",
+  "author": "Kate Ebensteiner",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/mtaopp/js_nuts/issues"
+    "url": "https://github.com/atournikate/Project_Template/issues"
   },
-  "homepage": "https://github.com/mtaopp/js_nuts#readme",
+  "homepage": "https://github.com/atournikate/Project_Template#readme",
   "devDependencies": {
     "sass": "^1.34.1"
   }
